--- a/user.ipynb
+++ b/user.ipynb
@@ -220,6 +220,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tata tata! good bye!\n"
+     ]
+    }
+   ],
+   "source": [
+    "var=input()\n",
+    "var1=ord(var)\n",
+    "if (var>='A' and var<='z' or var>='a' and var<='z') and (var1%2==0) :\n",
+    "    print(\"HELLO GOOD MORNING\")\n",
+    "else:\n",
+    "    print('tata tata! good bye!')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
