--- a/user.ipynb
+++ b/user.ipynb
@@ -820,6 +820,205 @@
     "    print(num-20)\n",
     "print(num)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "                   DECISIONAL OPERATERS\n",
+    "                   ELIF:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "digit\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "value=input()\n",
+    "if value >='a' and value<='b':\n",
+    "    print(\"lower case\")\n",
+    "elif value >='A' and value<=\"z\":\n",
+    "    print('upper case')\n",
+    "elif value >='0' and value<='9':\n",
+    "    print('digit')\n",
+    "else:\n",
+    "    print(\"symbol\")\n",
+    "print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "upper case\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "value=input()\n",
+    "if value >='a' and value<='b':\n",
+    "    print(\"lower case\")\n",
+    "elif value >='A' and value<=\"z\":\n",
+    "    print('upper case')\n",
+    "elif value >='0' and value<='9':\n",
+    "    print('digit')\n",
+    "else:\n",
+    "    print(\"symbol\")\n",
+    "print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "symbol\n",
+      "#\n"
+     ]
+    }
+   ],
+   "source": [
+    "value=input()\n",
+    "if value >='a' and value<='b':\n",
+    "    print(\"lower case\")\n",
+    "elif value >='A' and value<=\"z\":\n",
+    "    print('upper case')\n",
+    "elif value >='0' and value<='9':\n",
+    "    print('digit')\n",
+    "else:\n",
+    "    print(\"symbol\")\n",
+    "print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "upper case\n",
+      "S\n"
+     ]
+    }
+   ],
+   "source": [
+    "value=input()\n",
+    "if value >='a' and value<='b':\n",
+    "    print(\"lower case\")\n",
+    "elif value >='A' and value<=\"z\":\n",
+    "    print('upper case')\n",
+    "elif value >='0' and value<='9':\n",
+    "    print('digit')\n",
+    "else:\n",
+    "    print(\"symbol\")\n",
+    "print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "digit\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "ch=input()\n",
+    "if ch>='a' and ch<='z':\n",
+    "    print(chr(ord(ch)-32))\n",
+    "elif ch>='0' and ch<='9':\n",
+    "    print('digit')\n",
+    "print(ch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n",
+      "S\n"
+     ]
+    }
+   ],
+   "source": [
+    "ch=input()\n",
+    "if ch>='a' and ch<='z':\n",
+    "    print(chr(ord(ch)-32))\n",
+    "elif ch>='A' and ch<='Z':\n",
+    "    print(chr(ord(ch)+32))\n",
+    "elif ch>='0' and ch<='9':\n",
+    "    print('digit')\n",
+    "print(ch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S\n",
+      "s\n"
+     ]
+    }
+   ],
+   "source": [
+    "ch=input()\n",
+    "if ch>='a' and ch<='z':\n",
+    "    print(chr(ord(ch)-32))\n",
+    "elif ch>='A' and ch<='Z':\n",
+    "    print(chr(ord(ch)+32))\n",
+    "elif ch>='0' and ch<='9':\n",
+    "    print('digit')\n",
+    "print(ch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l=[1,2,3,4]\n",
+    "l="
+   ]
   }
  ],
  "metadata": {
