--- a/user.ipynb
+++ b/user.ipynb
@@ -1012,12 +1012,321 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "negative\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,-6,4]\n",
+    "l1=len(l)//2\n",
+    "if (l[l1]>=0):\n",
+    "    print('positive')\n",
+    "elif (l[l1]<=0):\n",
+    "    print('negative')\n",
+    "else:\n",
+    "    print('zero')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "83\n"
+     ]
+    }
+   ],
+   "source": [
+    "ch=input()\n",
+    "if ch>='A' and ch<='Z':\n",
+    "    print(ord(ch))\n",
+    "else:\n",
+    "    print(chr(ord(ch)-32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "positive\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=int(input())\n",
+    "if num>0:\n",
+    "    print('positive')\n",
+    "elif num<0:\n",
+    "    print('negative')\n",
+    "else:\n",
+    "    print('zero')\n",
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "val=int(input())\n",
+    "if val==0:\n",
+    "    print('zero')\n",
+    "elif val%2==0:\n",
+    "    print('even')\n",
+    "elif val%2==1:\n",
+    "    print('odd')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "digit\n"
+     ]
+    }
+   ],
+   "source": [
+    "ch=input()\n",
+    "if ch>='a' and ch<='z' or ch>='A' and ch<='Z':\n",
+    "    print('alphabet')\n",
+    "elif ch>='0' and ch<='9':\n",
+    "    print('digit')\n",
+    "else:\n",
+    "    print('symbol')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lower\n"
+     ]
+    }
+   ],
+   "source": [
+    "ch=input()\n",
+    "if ch>='a' and ch<='z':\n",
+    "    print('lower')\n",
+    "elif ch>='A' and ch<='Z':\n",
+    "    print('upper')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "digit\n"
+     ]
+    }
+   ],
+   "source": [
+    "ch=input()\n",
+    "if ch>='a' and ch<='z':\n",
+    "    print('lower')\n",
+    "elif ch>='A' and ch<='Z':\n",
+    "    print('upper')\n",
+    "elif ch>='0' and ch<='9':\n",
+    "    print('digit')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BUZZ\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=int(input())\n",
+    "if i%3==0 and i%5==0:\n",
+    "    print('FIZZBUZZ')\n",
+    "elif i%3==0:\n",
+    "    print('FIZZ')\n",
+    "elif i%5==0:\n",
+    "    print('BUZZ')\n",
+    "else :\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FIZZBUZZ\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=int(input())\n",
+    "if i%3==0 and i%5==0:\n",
+    "    print('FIZZBUZZ')\n",
+    "elif i%3==0:\n",
+    "    print('FIZZ')\n",
+    "elif i%5==0:\n",
+    "    print('BUZZ')\n",
+    "else :\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NESTED IF :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lesser then\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=int(input())\n",
+    "if num>0:\n",
+    "    if num%2==0:\n",
+    "        print('even')\n",
+    "    else:\n",
+    "        print('odd')\n",
+    "elif num<0:\n",
+    "    if num>-5:\n",
+    "        print('greater')\n",
+    "    else:\n",
+    "        print('lesser then')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n"
+     ]
+    }
+   ],
+   "source": [
+    "var=input()\n",
+    "if var>='A' and var<='Z':\n",
+    "    if ord(var)%2==0:\n",
+    "        print('even')\n",
+    "    else:\n",
+    "        print('odd')\n",
+    "elif var>='a' and var<='z':\n",
+    "    print(chr(ord(var)-32))\n",
+    "elif var>='0' and var<='9':\n",
+    "    print(var**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "different\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=input()\n",
+    "if len(st)>3:\n",
+    "    if st[0]==st[-1]:\n",
+    "        print('equal')\n",
+    "    else:\n",
+    "        print('different')\n",
+    "elif len(st)<2:\n",
+    "    if st[0]>='A' and st[0]<='Z':\n",
+    "        print('upper')\n",
+    "    if st[0]>='a' and st[0]<='z':\n",
+    "        print('lower')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "l=[1,2,3,4]\n",
-    "l="
+    "st=input()\n",
+    "mi=len(st)//2\n",
+    "if len(st)==5:\n",
+    "    if st(mi)>='a' and st(mi)<='z':\n",
+    "        print('lower')\n",
+    "    elif st(mi)>='A' and st(mi)<='Z':\n",
+    "        print('upper')\n",
+    "    elif st(mi)>='0' and st(mi)<='9':\n",
+    "        print('digit')\n",
+    "elif len(st)==2:\n",
+    "    if st[0]==st[-1]:\n",
+    "        print('equal')\n",
+    "    else:\n",
+    "        print('not equall')"
    ]
   }
  ],
