--- a/sunday.ipynb
+++ b/sunday.ipynb
@@ -743,69 +743,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "var=int(input)\n",
-    "38"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "39"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<function print(*args, sep=' ', end='\\n', file=None, flush=False)>"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l=list(input())\n",
-    "l=['1','2','3','4']\n",
-    "print    40"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[71], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m l\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlist\u001b[39m(s)\n\u001b[0;32m      3\u001b[0m l1\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlen\u001b[39m(l)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[43ml\u001b[49m\u001b[43m(\u001b[49m\u001b[43ml1\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m%\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124modd\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(l(l1))\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "single value data type\n"
      ]
     }
    ],
    "source": [
-    "s=(input())\n",
-    "l=list(s)\n",
-    "l1=len(l)//2\n",
-    "if (l(l1)%2==1):\n",
-    "    print('odd')\n",
-    "print(l(l1))"
+    "a=1\n",
+    "print(a)\n",
+    "if type(a) in [int,float,bool,complex]:\n",
+    "    print('single value data type') \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abc\n",
+      "('a', 'b', 'c')\n"
+     ]
+    }
+   ],
+   "source": [
+    "a='abc'\n",
+    "if type(a) in [str,tuple,set,dict] :\n",
+    "    print(a)\n",
+    "    print(tuple(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'2', '3', '6', '1', '5'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=input()\n",
+    "if type(a) in [str,tuple,int,float,bool]:\n",
+    "    print(set(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2', '3', '6', '5', '4']\n",
+      "odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=list(input())\n",
+    "num2=len(num)\n",
+    "num3=num2//2\n",
+    "if num3%2==1:\n",
+    "    print(num)\n",
+    "    print('odd')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140714470980832 140714470980832\n"
+     ]
+    }
+   ],
+   "source": [
+    "a='a'\n",
+    "b='a'\n",
+    "if a is b:\n",
+    "    print(id(a),id(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ram ram\n"
+     ]
+    }
+   ],
+   "source": [
+    "st1=input()\n",
+    "st2=input()\n",
+    "if st1==st2:\n",
+    "    st1==st2\n",
+    "    st2==st1\n",
+    "    print(st1,st2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'*': 42}\n"
+     ]
+    }
+   ],
+   "source": [
+    "ch=input()\n",
+    "if not ((ch>='A' and ch<='Z') or (ch>='a' and  num<='z') or (ch>='0' and ch<='9')):\n",
+    "    ch1=ord(ch)\n",
+    "    d={ch:ch1}\n",
+    "    print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 123, 4: '1234'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d=4\n",
+    "dict={1:123}\n",
+    "if d is not dict:\n",
+    "    dict[d]='1234'\n",
+    "    print(dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5462\n",
+      "2 is a last digit\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=int(input())\n",
+    "num1=num%10\n",
+    "if num1==2:\n",
+    "    print(num)\n",
+    "    print(num1,'is a last digit')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=int(input())\n",
+    "b=int(input())\n",
+    "if a==10 or b==10 or a+b==10:\n",
+    "    print(a+b)\n",
+    "    print((a+b)**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ram 3\n",
+      "anil 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "st=input()\n",
+    "st1=input()\n",
+    "if st != st1:\n",
+    "    print(st,len(st))\n",
+    "    print(st1,len(st1))"
    ]
   }
  ],
