--- a/slicing.ipynb
+++ b/slicing.ipynb
@@ -170,6 +170,135 @@
     "print(st[::-3])\n",
     "print(st[::4])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "EXAMPLES FOR SLICING\n",
+    "---------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jor\n",
+      "will\n",
+      "james\n",
+      "[40, 200, 300]\n",
+      "{'name': 'meason mount', 'age': 24, 'club': 'chelsea'}\n",
+      "['name', 'age', 'club']\n",
+      "{'name': 'meason mount', 'age': 24, 'club': 'chelsea'}\n",
+      "mount\n",
+      "['club', 'age']\n",
+      "chelsea\n",
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=['jordan','will blake',[300,200,40,'james willson'],{1:{'name':'meason mount', 'age':24,'club':'chelsea'}}]\n",
+    "print(l[0][0:3])\n",
+    "print(l[1][0:4])\n",
+    "print(l[2][3][0:5])\n",
+    "print(l[2][2::-1])\n",
+    "print(l[3][1])\n",
+    "print(list(l[3][1]))\n",
+    "print(l[3][1])\n",
+    "print(l[3][1]['name'][7:])\n",
+    "print(list(l[3][1])[2:0:-1])\n",
+    "print(l[3][1]['club'])\n",
+    "print(str(l[3][1]['age'])[::-1])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oneplus\n",
+      "elppA\n",
+      "lap\n",
+      "hse\n",
+      "Apple\n",
+      "sulp\n",
+      "pp\n",
+      "oneplusApple\n",
+      "venu\n",
+      "['Apple', 'oneplus']\n",
+      "venuresh\n",
+      "gopal\n",
+      "ana\n",
+      "amaresh\n",
+      "resh\n",
+      "anaconda\n"
+     ]
+    }
+   ],
+   "source": [
+    "d={1:['oneplus','Apple'],2:{'name1':'venugopal','name2':'amaresh'},'a':'anaconda'}\n",
+    "print(d[1][0])\n",
+    "print(d[1][1][::-1])\n",
+    "print(d[2]['name1'][8:5:-1])\n",
+    "print(d[2]['name2'][6:3:-1])\n",
+    "print(d[1][1])\n",
+    "print(d[1][0][6:2:-1])\n",
+    "print(d[1][1][1:3])\n",
+    "print(d[1][0]+d[1][1])\n",
+    "print(d[2]['name1'][0:4])\n",
+    "print(d[1][::-1])\n",
+    "print(d[2]['name1'][0:4]+d[2]['name2'][3:])\n",
+    "print(d[2]['name1'][4:])\n",
+    "print(d['a'][0:3])\n",
+    "print(d[2]['name2'])\n",
+    "print(d[2]['name2'][3:])\n",
+    "print(d['a'])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "printing a statement n-no.of times "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! How are you?\n",
+      "Hello! How are you?\n",
+      "Hello! How are you?\n",
+      "Hello! How are you?\n",
+      "Hello! How are you?\n"
+     ]
+    }
+   ],
+   "source": [
+    "a='''Hello! How are you?\n",
+    "Hello! How are you?\n",
+    "Hello! How are you?\n",
+    "Hello! How are you?\n",
+    "Hello! How are you?'''\n",
+    "print(a)"
+   ]
   }
  ],
  "metadata": {
